Entity annotation property and Column annotation on getter or property definition example

--- a/src/main/resources/notes.properties
+++ b/src/main/resources/notes.properties
@@ -5,6 +5,18 @@
 2. Create a session(s) from session factory
 3. Use the session to save the model objects
 
-@Entity: This annotation marks class as an Entity class
-@Id: This annotation marks field as primary key
+@Entity: This annotation marks class as an Entity class.
+@Id: This annotation marks field as primary key.
+@Entity(name="name_of_the table") : To specify a name instead of class name as a table name.
+@Column : This annotation is used to specify the column name and some more column properties
+@Column( ColumnDefinition
+         insertable
+         length
+         nullable
+         name
+         pricision
+         scale
+         table
+         unique
+         updateable
 #The above two annotations are minmum mandatory annotations
