@Table annotation example with all parameters

--- a/src/main/resources/notes.properties
+++ b/src/main/resources/notes.properties
@@ -20,3 +20,15 @@
          unique
          updateable
 #The above two annotations are minmum mandatory annotations
+#Table Annotation and It's Parameter Description
+--------------------------------------------------------------------------------------------
+#Class Modifiers	
+@Table	@Table(name="")	
+
+Using this annotation we can mark the database table name for the specified entity	This annotation will be placed on top of the class definition
+#Properties	
+#DataType #parameter         #Description
+String	  catalog	         Descibes the table (not clear about this)	
+Array	  uniqueConstraints	 Array of @UniqueConstraint annotations. It allows to hint the SchemaTool to generate a database unique constraint on the specified table columns	
+Array	  indexes	         indexes: Array of @Index annotations,It allows to hint the SchemaTool to generate a database indexes on the specified table columns
+-----------------------------------------------------------------------------------------------	
