--- a/src/main/resources/notes.properties
+++ b/src/main/resources/notes.properties
@@ -32,3 +32,12 @@ String	  catalog	         Descibes the table (not clear about this)
 Array	  uniqueConstraints	 Array of @UniqueConstraint annotations. It allows to hint the SchemaTool to generate a database unique constraint on the specified table columns	
 Array	  indexes	         indexes: Array of @Index annotations,It allows to hint the SchemaTool to generate a database indexes on the specified table columns
 -----------------------------------------------------------------------------------------------	
+
+------------------------------------------------------------------------------------------------
+Column Annotations
+If we apply insertable=false and nullable=false on single property, It will raise constraint voilation exception at the run time
+#Error messages for wrong data
+Data too long for column 'password' at row 1
+nullable test: not-null property references a null
+Duplicate entry 'si@gmail.com' for key :unique test
+Not clear about columnDefinition, scale and precision parameters as these are related to DDL
