Primary Key Information along with @Id annotation

--- a/src/main/resources/notes.properties
+++ b/src/main/resources/notes.properties
@@ -58,3 +58,22 @@ boolean	 optional	            Defines whether the value of the field or property
 		                        
 @Lob 	                        To store large amount of data
                                 To store huge amount of data @Lob= CLOB or BLOB
+---------------------------------------------------------------------------------------
+@GenratedValue                                    Genrates a auto increment column with the default strategy supported by DB
+@GenratedValue(generator="som_val")               Not clear about this
+
+The primary key generation strategy that the persistence provider must use to generate the annotated entity primary key.
+@GeneratedValue(strategy=GenerationType.SEQUENCE) 
+	#org.hibernate.dialect.MySQL5Dialect does not support sequences
+@GeneratedValue(strategy=GenerationType.AUTO) 
+	#supported by MYSQL
+@GeneratedValue(strategy=GenerationType.IDENTITY)
+	#supported by MYSQL
+@GeneratedValue(strategy=GenerationType.TABLE)
+when we use this strategy the following queries will be executed by hibernate
+Hibernate: create table hibernate_sequences ( sequence_name varchar(255),  sequence_next_hi_value integer )
+Hibernate: select sequence_next_hi_value from hibernate_sequences where sequence_name = 'MoreAnnotations' for update
+Hibernate: insert into hibernate_sequences(sequence_name, sequence_next_hi_value) values('MoreAnnotations', ?)
+Hibernate: update hibernate_sequences set sequence_next_hi_value = ? where sequence_next_hi_value = ? and sequence_name = 'MoreAnnotations'
+Hibernate: insert into MoreAnnotations (address, date, datetime, datetimestamp, number, password, time, Id) values (?, ?, ?, ?, ?, ?, ?, ?)
+#We we use create strategy, the hibernate_sequences will not removed, we need to manually delete this table if we don't want     
