@Embedded and @Embeddable annotations and HAS-A relationship

--- a/src/main/resources/notes.properties
+++ b/src/main/resources/notes.properties
@@ -76,4 +76,19 @@ Hibernate: select sequence_next_hi_value from hibernate_sequences where sequence
 Hibernate: insert into hibernate_sequences(sequence_name, sequence_next_hi_value) values('MoreAnnotations', ?)
 Hibernate: update hibernate_sequences set sequence_next_hi_value = ? where sequence_next_hi_value = ? and sequence_name = 'MoreAnnotations'
 Hibernate: insert into MoreAnnotations (address, date, datetime, datetimestamp, number, password, time, Id) values (?, ?, ?, ?, ?, ?, ?, ?)
-#We we use create strategy, the hibernate_sequences will not removed, we need to manually delete this table if we don't want     
+#We we use create strategy, the hibernate_sequences will not removed, we need to manually delete this table if we don't want
+
+------------------------------------------------------------------------------------------------
+Value Types and Embeding Objects
+------------------------------------------------------------------------------------------------
+1. I have Has a relation ship in my Employee class (Other object inside the class)
+2. Employee has a address, And Address having different properties like street,city,pincode,state
+3. If I want to represent the address details also into the same table then we will use
+Embeded objects.
+
+We can use @Embedded annotation on Address property in Employee class or
+We can use @Embeddable annotation on top of Address class or 
+We can use both at the respective places.
+#Query
+Hibernate: insert into EmployeeDetails (CITY, pincode, STATE, STREET, dob, EMP_NAME, phone) values (?, ?, ?, ?, ?, ?, ?)
+     
