@AttributedsOverrides @AttributeOverride and @EmbeddedId example

--- a/src/main/resources/notes.properties
+++ b/src/main/resources/notes.properties
@@ -92,3 +92,23 @@ We can use both at the respective places.
 #Query
 Hibernate: insert into EmployeeDetails (CITY, pincode, STATE, STREET, dob, EMP_NAME, phone) values (?, ?, ?, ?, ?, ?, ?)
      
+--------------------------------------------------------------------------------------------------
+@Embedded with @AttributeOverrides and @AttributeOverride
+--------------------------------------------------------------------------------------------------
+1. When I want use two Address objects inside the EmployeeDetails with homeAddress and officeAddress.
+2. In this scenario it will fail to store the details in the single column
+3. To avoid this conflict hibernate provides @AttributeOverrides and @AttributeOverride annotations to specify our 
+own names for a specific address property
+#Query
+Hibernate: insert into EmployeeDetails (dob, CITY, HOME_PINCODE, STATE, STREET, 
+EMP_NAME, OFFICE_CITY, OFFICE_PINCODE, OFFICE_STATE, OFFICE_STREET, phone) 
+values (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)
+
+---------------------------------------------------------------------------------------------------
+@EmbeddedId
+---------------------------------------------------------------------------------------------------
+In EmployeeDetails class we can use combination of another embedded object properties value as a primarykey
+For eg: HelloClass object value=abcdefhijklm as a combination of number of properties of HelloClass as primary key 
+@EmbeddedId
+private HelloClass Id;
+
