@ElementCollection annotation example

--- a/src/main/resources/notes.properties
+++ b/src/main/resources/notes.properties
@@ -112,3 +112,20 @@ For eg: HelloClass object value=abcdefhijklm as a combination of number of prope
 @EmbeddedId
 private HelloClass Id;
 
+----------------------------------------------------------------------------------------------------
+@ElementCollection
+----------------------------------------------------------------------------------------------------
+1. When i want to collect the list of addresses of the user where he leaved.
+2. We can define List<Address> property in EmployeeDetails1 (main class)
+3. We can use @ElementCollection on top of it.
+4. @ElementCollection :
+    hibernate will create EmployeeDetails1 table to store the employee details
+    It will also create a table with the Mainclass table name and the property name of address defined in main class
+    syntax: Tablename_addresspropertyname
+    eg: EmployeeDetails1 (main table)
+        EmployeeDetails1_address (child table)
+
+Hibernate: insert into EmployeeDetails1 (EMP_NAME) values (?)
+Hibernate: insert into EmployeeDetails1_address (EmployeeDetails1_Id, CITY, pincode, STATE, STREET) values (?, ?, ?, ?, ?)
+Hibernate: insert into EmployeeDetails1_address (EmployeeDetails1_Id, CITY, pincode, STATE, STREET) values (?, ?, ?, ?, ?)
+
